0.3.7
    - Allow Font::FreeType face() and version() methods to be called
      at the class level. In particular allow `Font::FreeType.face(..)`
      rather than `Font::FreeType.new.face(...)`
    - port examples/magick.raku from Perl
    - Add :%callbacks option to Font::FreeType::Outline.decompose() method.
      Option ported from the Perl outline_decompose() method.
    - Add native method ft6_bitmap_get_pixels(). Speed up the bitmap pixels
      method. Improve the performance of bin/fontsay examples/magick/raku, etc
0.3.6
    - Rename GlyphImage bold() method to set-bold().
    - Add methods iterate-glyphs(), iterate-chars().
0.3.5
    - Add TT_OS2 panose() and achVendID() accessors. Also TT_PCLT typeface()
      and fileName() accessors
0.3.4
    - Corrections to TT_PCLT record structure and TT_Post.italicAngle()
      accessor
0.3.3
    - Added Font::FreeType::Raw::TT_SFnt - mappings to raw TrueType
      font tables
0.3.2
    - Documentation fixes #5
    - Add method $face.glyph-name-from-index
0.3.1
    - Documentation changes
0.3.0
    - native -> raw in class names and attributes. Follow lead of LibXML
      -- Font::FreeType::Native -> Font::FreeeType::Raw
      -- $obj.native -> $obj.raw
      As LibXML demonstrates, the outer classes can also use native
      representations, mostly for performance reasons.
0.2.3
    - Convert documentation to github pages. New documentation
      root is https://pdf-raku.github.io/Font-FreeType-raku
0.2.2
    - Rename sources *.pm -> *.rakumod
0.2.1
    - Rename Font::FreeType::Types to Font::FreeType::Defs and
      add exports $FT-LIB, $FT-WRAPPER-LIB and $CLIB
0.2.0
    - Generate documentation (markdown) to docs/ directory
0.1.9
    - Fix existing deprecations. Also deprecate newly introduced
      unbox() accessor in favour of native().
0.1.8
    - Re-enable freeing of the Freetype library in DESTROY
    - Deprecate $freetype/$face struct() method in favour of unbox()
0.1.7